[SYNCOPE-1737] Managing releaseAttrs via DefaultAttrReleasePolicyConf (#418)